# neural

./: .gitignore  Cargo.toml  Readme.md
example/: Cargo.toml  Makefile  Readme.md
example/src/cifar10/: main.rs
example/src/grokking/: main.rs
example/src/mnist/: main.rs
example/src/xor/: main.rs
